--- a/login/config/config.json
+++ b/login/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "tb_transkrip",
+    "database": "pweb_transkrip",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
