download, generate, status done. frontend belum fix.

--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
-  "name": "login",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.1.1",
-    "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "ejs": "^3.1.10",
-    "express": "^4.19.2",
-    "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.9.7",
-    "nodemon": "^3.1.2",
-    "sequelize": "^6.37.3"
-  },
-  "devDependencies": {
-    "sequelize-cli": "^6.6.2"
-  }
+	"name": "login",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "nodemon index.js",
+		"migrate": "sequelize db:migrate",
+		"seed": "sequelize db:seed:all"
+	},
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"body-parser": "^1.20.2",
+		"cookie-parser": "^1.4.6",
+		"cors": "^2.8.5",
+		"dotenv": "^16.4.5",
+		"ejs": "^3.1.10",
+		"express": "^4.19.2",
+		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
+		"mysql2": "^3.9.7",
+		"nodemailer": "^6.9.13",
+		"nodemon": "^3.1.2",
+		"pdfkit": "^0.15.0",
+		"sequelize": "^6.37.3"
+	},
+	"devDependencies": {
+		"sequelize-cli": "^6.6.2"
+	}
 }
