--- a/package.json
+++ b/package.json
@@ -16,16 +16,22 @@
 		"body-parser": "^1.20.2",
 		"cookie-parser": "^1.4.6",
 		"cors": "^2.8.5",
+		"docx-pdf": "^0.0.1",
+		"docxtemplater": "^3.47.4",
+		"docxtemplater-image-module": "^3.0.0",
 		"dotenv": "^16.4.5",
 		"ejs": "^3.1.10",
 		"express": "^4.19.2",
 		"jsonwebtoken": "^9.0.2",
+		"libreoffice-convert": "^1.5.1",
 		"multer": "^1.4.5-lts.1",
 		"mysql2": "^3.9.7",
 		"nodemailer": "^6.9.13",
 		"nodemon": "^3.1.2",
 		"pdfkit": "^0.15.0",
-		"sequelize": "^6.37.3"
+		"pizzip": "^3.1.7",
+		"sequelize": "^6.37.3",
+		"xmldom": "^0.6.0"
 	},
 	"devDependencies": {
 		"sequelize-cli": "^6.6.2"
